fix(style): Account for emoji shifting line height of device information mozilla/fxa-content-server#5630) r=@ryanfeeley, @shane-tomlinson
Restrict line height to 1.2 to account for emoji in device names.
Previously, the device information line height got out of alignment
with emoji in device names.

Closes mozilla/fxa-content-server#5516

--- a/packages/fxa-content-server/app/styles/modules/_settings.scss
+++ b/packages/fxa-content-server/app/styles/modules/_settings.scss
@@ -531,6 +531,7 @@ section.modal-panel {
   }
 
   .client-name {
+    line-height: 1.2;
     overflow: hidden;
     text-overflow: ellipsis;
     /*allows 5% gutter between device-name and .device-disconnected button*/
